--- a/NEWS
+++ b/NEWS
@@ -40,7 +40,7 @@ What is new in 2.9
 
 ============================================================================
 
-What is new in 2.8
+What is new in 2.8 new code
 
  - More scalable directory tree locking
 
